# aisuite

./: .env.sample  .gitignore  .pre-commit-config.yaml  .runtests.sh  CONTRIBUTING.md  README-alternative.md  README.md  modelslab_provider.py  pyproject.toml  requirements.txt
.github/workflows/: gemini_code_review.yml  release.yml  run_js_tests.yml  run_pytest.yml
aisuite/: __init__.py  client.py  provider.py
aisuite-js/: README.md  jest.config.ts  jest.integration.config.ts  package-lock.json  package.json  tsconfig.json
aisuite-js/examples/: .env.example  basic-usage.ts  deepgram.ts  google.ts  groq.ts  openai-asr.ts  streaming.ts  test-suite.ts  tool-calling.ts
aisuite-js/src/: client.ts  index.ts
aisuite-js/tests/: client.test.ts
aisuite/agents/: __init__.py  artifact_store.py  artifacts.py  context.py  postgres_state_store.py  runner.py  state_store.py  types.py  viewer.py
aisuite/framework/: __init__.py  chat_completion_chunk.py  chat_completion_response.py  chat_completion_stream_response.py  choice.py  function_call.py  message.py  parameter_mapper.py
aisuite/mcp/: client.py  config.py  schema_converter.py  tool_wrapper.py
aisuite/providers/: anthropic_provider.py  atlascloud_provider.py  aws_provider.py  azure_provider.py  baidu_provider.py  cerebras_provider.py  cohere_provider.py  crusoe_provider.py  deepseek_provider.py  eas_pai_provider.py  edenai_provider.py  featherless_provider.py  fireworks_provider.py  foundry_local_provider.py  foundry_provider.py  gemini_provider.py  google_genai_provider.py  google_provider.py  greennode_provider.py  huggingface_provider.py  litellm_provider.py  lmstudio_provider.py  minimax_provider.py  mlx_provider.py  modelslab_provider.py  nebius_provider.py  ollama_provider.py  openai_provider.py  openvino_provider.py  pinstripes_provider.py  reka_provider.py  requesty_provider.py  sarvam_provider.py  tongyi_provider.py  uncommonroute_provider.py  volcano_provider.py  watsonx_provider.py  xai_provider.py
aisuite/toolkits/: files.py  git.py  shell.py
aisuite/tracing/: __init__.py  normalize.py  otel.py  sinks.py  store.py  viewer.py
aisuite/utils/: tool_manager.py  tools.py
docs/: agents-quickstart.md  opencoworker-quickstart.md  openworker-quickstart.md
examples/: client.ipynb  function_calling.py  mcp_config_dict_example.py  mcp_http_example.py  mcp_tools_example.ipynb  simple_tool_calling.ipynb
examples/agents/: movie_buff_assistant.ipynb  simple_agent.py  snake_game_generator.ipynb  stock_market_mini_tracker.ipynb
examples/chat-ui/: chat.py
examples/cli/: create_demo_trace.py  dev.py
guides/: README.md  aws.md  azure.md  centml.md  cerebras.md  crusoe.md  edenai.md  featherless.md  foundry.md  foundry_local.md  gemini.md  google.md  google_genai.md  greennode.md  huggingface.md  lmstudio.md  minimax.md  mistral.md  mlx.md  ollama.md  reka.md  sarvam.md  tongyi.md  watsonx.md
platform/: .gitignore  pyproject.toml
platform/abandoned-ux-mocks/: index.html  integrations.html  session-view.html
platform/coworker/: agent.py  attachments.py  audit.py  catalog.py  cli.py  cloud.py  config.py  conversations.py  engine.py  environment.py  events.py  inbox.py  inbox_routing.py  overrides.py  permissions.py  project.py  roots.py  secrets.py  selfwake.py  sessions.py  subscriptions.py  unrouted.py
platform/docs/: UX-DECISIONS.md
platform/packaging/: build_dmg.sh  build_linux.sh  build_windows.ps1  coworker-server.spec  dmg-background.tiff  make_update_manifest.py
platform/stt/: Cargo.toml
platform/stt/src/: lib.rs
platform/tests/: conftest.py  test_accounts.py  test_anthropic_provider.py  test_attachments.py  test_automation.py  test_capabilities.py  test_cloud.py  test_cloud_server.py  test_code_tools.py  test_config.py  test_connections.py  test_connectors.py  test_connectors_allowlist.py  test_dm_routing.py  test_durable_resume.py  test_email_tools.py  test_engine.py  test_fake_slack.py  test_gateway_inbox_reply.py  test_gcal_accounts.py  test_gemini_provider.py  test_github_installs.py  test_gmail_accounts.py  test_hubspot_portals.py  test_inbox.py  test_inbox_routing.py  test_interactions.py  test_mcp.py  test_mcp_connectors.py  test_mcp_oauth.py  test_memory.py  test_mention_router.py  test_message_source.py  test_model_errors.py  test_multiroot.py  test_persona_connections.py  test_persona_loading.py  test_persona_manifest.py  test_persona_registry.py  test_plan_mode.py  (+25 more)
platform/ui-mocks/: redesign.html
tests/: test_provider.py
tests/agents/: helpers.py  test_agent_integration_flows.py  test_artifact_store.py  test_continuation.py  test_otel_sink.py  test_postgres_state_store.py  test_tool_policy.py  test_trace_output.py  test_trace_sinks.py  test_viewer.py
tests/cli/: test_aisuite_code_cli.py
tests/client/: test_async_client.py  test_client.py  test_manual_tool_calling.py  test_mcp_fallback.py  test_prerelease.py  test_streaming.py
tests/examples/: test_dev_cli.py
tests/framework/: test_asr_params.py
tests/mcp/: README.md  conftest.py  test_client.py  test_e2e.py  test_http_llm_e2e.py  test_http_transport.py  test_llm_e2e.py
tests/providers/: test_anthropic_images.py  test_anthropic_streaming.py  test_asr_parameter_passthrough.py  test_async_provider.py  test_atlascloud_provider.py  test_aws_converter.py  test_azure_provider.py  test_cohere_provider.py  test_crusoe_provider.py  test_deepgram_provider.py  test_eas_pai_provider.py  test_edenai_provider.py  test_featherless_provider.py  test_foundry_local_provider.py  test_foundry_provider.py  test_gemini_provider.py  test_google_converter.py  test_google_provider.py  test_huggingface_provider.py  test_inception_provider.py  test_litellm_provider.py  test_lmstudio_provider.py  test_minimax_provider.py  test_mistral_provider.py  test_mlx_provider.py  test_modelslab_provider.py  test_nebius_provider.py  test_ollama_provider.py  test_openai_provider.py  test_openvino_provider.py  test_pinstripes_provider.py  test_reka_provider.py  test_requesty_provider.py  test_sambanova_provider.py  test_sarvam_provider.py  (+4 more)
(+233 files in other folders)
