[project]
name = "aisuite"
version = "0.1.14"
description = "Uniform access layer for LLMs"
authors = [
    {name = "Andrew Ng", email = "ng@deeplearning.ai"},
    {name = "Rohit P", email = "rohit.prasad15@gmail.com"},
]
maintainers = [
    {name = "Andrew Ng", email = "ng@deeplearning.ai"},
    {name = "Rohit P", email = "rohit.prasad15@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "docstring-parser>=0.15.0,<0.16.0",
    "httpx>=0.27.0,<0.28.0",
]

[project.optional-dependencies]
# Provider / feature extras (install with e.g. pip install aisuite[aws])
anthropic = ["anthropic>=0.30.1,<0.31.0"]
aws = ["boto3>=1.34.144,<2.0.0"]
cerebras = ["cerebras_cloud_sdk>=1.19.0,<2.0.0"]
cohere = ["cohere>=5.12.0,<6.0.0"]
deepgram = [
    "deepgram-sdk>=5.0.0,<6.0.0",
    "soundfile>=0.12.1,<0.13.0",
    "scipy>=1.11.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
]
deepseek = ["openai>=1.107.0,<2.0.0"]
google = [
    "vertexai>=1.63.0,<2.0.0",
    "google-cloud-speech>=2.33.0,<3.0.0",
]
groq = ["groq>=0.9.0,<0.10.0"]
mistral = ["mistralai>=1.0.3,<2.0.0"]
openai = ["openai>=1.107.0,<2.0.0"]
watsonx = ["ibm-watsonx-ai>=1.1.16,<2.0.0"]
mcp = ["mcp>=1.1.2,<2.0.0", "nest-asyncio>=1.6.0,<2.0.0"]
azure = []
huggingface = []
ollama = []
# Install all providers
all = [
    "anthropic>=0.30.1,<0.31.0",
    "boto3>=1.34.144,<2.0.0",
    "cerebras_cloud_sdk>=1.19.0,<2.0.0",
    "cohere>=5.12.0,<6.0.0",
    "deepgram-sdk>=5.0.0,<6.0.0",
    "google-cloud-speech>=2.33.0,<3.0.0",
    "groq>=0.9.0,<0.10.0",
    "ibm-watsonx-ai>=1.1.16,<2.0.0",
    "mcp>=1.1.2,<2.0.0",
    "mistralai>=1.0.3,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "openai>=1.107.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "soundfile>=0.12.1,<0.13.0",
    "vertexai>=1.63.0,<2.0.0",
]

# Dev and test
[dependency-groups]
dev = [
    "anthropic>=0.30.1,<0.31.0",
    "black>=24.4.2,<25.0.0",
    "boto3>=1.34.144,<2.0.0",
    "cerebras_cloud_sdk>=1.19.0,<2.0.0",
    "chromadb>=0.5.4,<0.6.0",
    "datasets>=2.20.0,<3.0.0",
    "deepgram-sdk>=5.0.0,<6.0.0",
    "fireworks-ai>=0.14.0,<0.15.0",
    "google-cloud-speech>=2.33.0,<3.0.0",
    "groq>=0.9.0,<0.10.0",
    "ibm-watsonx-ai>=1.1.16,<2.0.0",
    "mistralai>=1.0.3,<2.0.0",
    "notebook>=7.2.1,<8.0.0",
    "ollama>=0.2.1,<0.3.0",
    "onnxruntime~=1.23.0; python_version >= '3.10' and python_version < '3.11'",
    "onnxruntime~=1.24.0; python_version >= '3.11'",
    "openai>=1.107.0,<2.0.0",
    "pre-commit>=3.7.1,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "sentence-transformers>=3.0.1,<4.0.0",
    "vertexai>=1.63.0,<2.0.0",
]
test = [
    "pytest>=8.2.2,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
]

[tool.poetry.group.dev]
optional = true
include-groups = []

[tool.poetry.group.test]
optional = true
include-groups = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths="tests"
markers = [
    "integration: marks tests as integration tests that interact with external services",
    "llm: marks tests that make real LLM API calls and incur costs (subset of integration)",
    "mcp_server: marks tests that require MCP server functionality (e.g., npx, external MCP servers)",
]
