[project]
name = "aisuite"
version = "0.1.14"
description = "Uniform access layer for LLMs"
authors = [
    {name = "Andrew Ng", email = "ng@deeplearning.ai"},
    {name = "Rohit P", email = "rohit.prasad15@gmail.com"},
]
maintainers = [
    {name = "Andrew Ng", email = "ng@deeplearning.ai"},
    {name = "Rohit P", email = "rohit.prasad15@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "docstring-parser~=0.17.0",
    "httpx~=0.28.1",
]

[project.optional-dependencies]
# Provider / feature extras (install with e.g. pip install aisuite[aws])
anthropic = ["anthropic~=0.84.0"]
aws = ["boto3~=1.42.58"]
cerebras = ["cerebras_cloud_sdk~=1.67.0"]
cohere = ["cohere~=5.20.7"]
deepgram = [
    "deepgram-sdk~=6.0.1",
    "soundfile~=0.13.1",
    "scipy~=1.15.3",
    "numpy~=2.2.6",
]
deepseek = ["openai~=2.24.0"]
google = [
    "vertexai~=1.71.1",
    "google-cloud-speech~=2.36.1",
]
groq = ["groq~=1.0.0"]
mistral = ["mistralai~=1.12.4"]
openai = ["openai~=2.24.0"]
watsonx = ["ibm-watsonx-ai~=1.3.42"]
mcp = ["mcp~=1.26.0", "nest-asyncio~=1.6.0"]
azure = []
huggingface = []
ollama = []
# Install all providers
all = [
    "anthropic~=0.84.0",
    "boto3~=1.42.58",
    "cerebras_cloud_sdk~=1.67.0",
    "cohere~=5.20.7",
    "deepgram-sdk~=6.0.1",
    "google-cloud-speech~=2.36.1",
    "groq~=1.0.0",
    "ibm-watsonx-ai~=1.3.42",
    "mcp~=1.26.0",
    "mistralai~=1.12.4",
    "nest-asyncio~=1.6.0",
    "numpy~=2.2.6",
    "openai~=2.24.0",
    "scipy~=1.15.3",
    "soundfile~=0.13.1",
    "vertexai~=1.71.1",
]

# Dev and test
[dependency-groups]
dev = [
    "anthropic~=0.84.0",
    "black~=26.1.0",
    "boto3~=1.42.58",
    "cerebras_cloud_sdk~=1.67.0",
    "chromadb~=1.5.1",
    "datasets~=4.6.0",
    "deepgram-sdk~=6.0.1",
    "fireworks-ai~=0.19.20",
    "google-cloud-speech~=2.36.1",
    "groq~=1.0.0",
    "ibm-watsonx-ai~=1.3.42",
    "mistralai~=1.12.4",
    "notebook~=7.5.4",
    "ollama~=0.6.1",
    "onnxruntime~=1.23.0; python_version >= '3.10' and python_version < '3.11'",
    "onnxruntime~=1.24.0; python_version >= '3.11'",
    "openai~=2.24.0",
    "pre-commit~=4.5.1",
    "python-dotenv~=1.2.1",
    "sentence-transformers~=5.2.3",
    "vertexai~=1.71.1",
    {include-group = "test"},
]
test = [
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-asyncio~=1.3.0",
]

[tool.poetry.group.dev]
optional = true
include-groups = []

[tool.poetry.group.test]
optional = true
include-groups = []

[build-system]
requires = ["poetry-core>=2.2.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths="tests"
markers = [
    "integration: marks tests as integration tests that interact with external services",
    "llm: marks tests that make real LLM API calls and incur costs (subset of integration)",
    "mcp_server: marks tests that require MCP server functionality (e.g., npx, external MCP servers)",
]
